# perf_hacks

./: .gitignore  README.md  mkdocs.yml
code-snippet/c/c-codesnippet/src/data_structure/: CMakeLists.txt
code-snippet/c/c-codesnippet/src/data_structure/btree/: btree.c  test_btree.c
code-snippet/c/c-codesnippet/src/data_structure/include/: array_sort.h  btree.h  item.h  link_list.h  more_string.h  number.h  point.h  queue.h  stack.h
code-snippet/c/c-codesnippet/src/data_structure/item/: item.c
code-snippet/c/c-codesnippet/src/data_structure/list/: link_list.c  test_link_list.c
code-snippet/c/c-codesnippet/src/data_structure/number/: number.c  test_number.c
code-snippet/c/c-codesnippet/src/data_structure/point/: point.c  test_point.c
code-snippet/c/c-codesnippet/src/data_structure/queue/: queue.c  test_queue.c
code-snippet/c/c-codesnippet/src/data_structure/sort/: insertion_array_sort.c  selection_array_sort.c  test_array_sort.c
code-snippet/c/c-codesnippet/src/data_structure/stack/: stack.c  test_stack.c
code-snippet/c/c-codesnippet/src/data_structure/string/: more_string.c  test_more_string.c
code-snippet/c/linux-programming-codesnippet/src/process/: CMakeLists.txt  display_env.c  longjmp.c  mem_segments.c  modify_env.c  necho.c  process_id.c  setjmp_vars.c
code-snippet/cmake-snippet/tutorial/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
code-snippet/cmake-snippet/tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
code-snippet/cplusplus/cplusplus-codesnippet/: CMakeLists.txt  Doxyfile  example_boost.cmake  example_classes.cmake  example_data_structure.cmake  example_functions.cmake  example_namespaces.cmake  example_templates.cmake  example_types.cmake
code-snippet/cplusplus/cplusplus-codesnippet/src/: hello_world.cpp
code-snippet/cplusplus/cplusplus-codesnippet/src/boost/: example_boost_log.cpp  example_boost_typeindex.cpp
code-snippet/cplusplus/cplusplus-codesnippet/src/classes/allocation/: my_queue.cpp  my_queue.h  my_string.cpp  my_string.h  (+2 more)
code-snippet/cplusplus/cplusplus-codesnippet/src/composite_types/: example_array.cpp
code-snippet/cplusplus/cplusplus-codesnippet/src/functions/: example_function_parameter.cpp  example_function_recursion.cpp  example_function_simple.cpp  example_function_template.cpp  example_function_with_array.cpp  example_function_with_string.cpp  example_function_with_struct.cpp  example_inline_function.cpp  example_pointer_to_function.cpp  example_references.cpp
code-snippet/cplusplus/cplusplus-codesnippet/src/memory_namespaces/: test_dynamic_memory.cpp
code-snippet/cplusplus/cplusplus-codesnippet/src/primitive_types/: example_cast.cpp  example_enum.cpp  example_pointer.cpp  example_sizeof.cpp  example_string.cpp  example_structure.cpp  example_union.cpp
code-snippet/cplusplus/cplusplus-codesnippet/src/templates/: example_template_array.cpp  example_template_valarray.cpp  example_template_vector.cpp
code-snippet/cplusplus/essential-cplusplus/: CMakeLists.txt  greeting
code-snippet/cplusplus/essential-cplusplus/greeting.dSYM/Contents/: Info.plist
code-snippet/cplusplus/essential-cplusplus/src/: 01_basic_programminggreeting
code-snippet/cplusplus/essential-cplusplus/src/01_basic_programming/: CMakeLists.txt  game.cpp  greeting.cpp  num_sequence.h
code-snippet/cplusplus/essential-cplusplus/src/04_object_based_programming/: CMakeLists.txt
code-snippet/rust/rust-codesnippet/: Cargo.toml  gen_doc.sh
code-snippet/rust/rust-codesnippet/src/: main.rs
code-snippet/rust/rust-codesnippet/src/basic_types/: example_array.rs  example_slice.rs  example_string.rs  example_vec.rs  mod.rs
code-snippet/rust/rust-codesnippet/src/ownership/: example_copy_types.rs  example_moves.rs  example_rc_arc.rs  mod.rs
code-snippet/rust/rust-codesnippet/src/references/: example_ref.rs  example_ref_as_values.rs  mod.rs
code-snippet/rust/rust-codesnippet/src/smart_pointers/: example_weak.rs  mod.rs
code-snippet/rust/rust-codesnippet/src/tests/: example_unit_test.rs  mod.rs
code-snippet/rust/rust-codesnippet/src/tour/: mandelbrot.rs  math.rs  mod.rs  tests.rs  web_server.rs
(+621 files in other folders)
