[package]
name = "rust-codesnippet"
version = "0.1.0"
authors = ["zhoujiagen <zhoujiagen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.5.1"
mime = "0.2.3"
router = "0.5.1"
urlencoded = "0.5.0"
crossbeam = "0.2.8"
num = "0.1.27"
image = "0.13.0"
rand = "0.5.6"